# DocuChat

./: .coverage  .env.template  .gitignore  Dockerfile  Makefile  pyproject.toml
app/: __init__.py  env.py  error_handlers.py  main.py
app/events/: __init__.py  admin.py  auth.py  auth_events.py  cache.py  document.py  ingestion.py  security.py
app/lib/: cache.py  chunker.py  document_extractor.py  events.py  exceptions.py  logging.py  metrics.py  password.py  prompt_sanitizer.py  response_formatter.py  tokens.py
app/lib/http/: openai_breaker.py  openai_client.py  retry.py
app/middleware/: abuse_detection.py  auth.py  authorize.py  fingerprint.py  metrics.py  ratelimiter.py  request_logger.py  verify_webhook.py
app/orm/: config.py
app/orm/migrations/: 0001_initial.py  0002_add_refresh_tokens.py  0003_add_rbac.py  0004_add_soft_delete.py  0005_add_webhook_events.py  0006_enable_pgvector.py  0007_add_vector_column.py  0008_add_hsnw_index.py
app/orm/models/: __init__.py  conversations.py  documents.py  observability.py  users.py  webhook.py
app/orm/seeds/: permission_roles.py
app/queues/: __init__.py
app/queues/jobs/: __init__.py  dead_letter.py  document.py  embedding.py
app/queues/workers/: __init__.py  document.py  embedding.py
app/responses/: auth.py  envelope.py
app/routes/: __init__.py  admin.py  auth.py  conversations.py  documents.py  health.py  webhooks.py
app/services/: auth.py  conversation.py  document.py  embedding.py  rbac.py
app/validators/: _commons.py  auth.py  conversation.py  document.py
tests/: __init__.py  conftest.py
tests/test_integrations/routes/: test_auth_routes.py  test_protected_routes.py
tests/test_units/services/: test_auth.py  test_rbac.py
